--- a/app/components/knob/knob.module.css
+++ b/app/components/knob/knob.module.css
@@ -2,6 +2,7 @@
   box-shadow: 0 0.2em 0.1em 0.05em rgba(255, 255, 255, 0.1) inset,
     0 -0.2em 0.1em 0.05em rgba(0, 0, 0, 0.5) inset,
     0 0.5em 0.65em 0 rgba(0, 0, 0, 0.3);
+  transition: rotate 50ms ease;
 }
 
 .knob::before {
